JBTM-1380 Build times out because of not enough PermGen space