@@ -18,12 +18,6 @@
 	<description>localjunit tests for xts</description>
         <properties>
             <buildType>11</buildType>
-            <general.server.jvm.args>-Xms64m -Xmx1024m -XX:MaxPermSize=512m
-                                     -Dorg.jboss.byteman.verbose
-                                    -Djboss.modules.system.pkgs=org.jboss.byteman
-                                    -Dorg.jboss.byteman.transform.all
-                                    -javaagent:${project.build.directory}/lib/byteman.jar=listener:true
-            </general.server.jvm.args>
             <ipv4.server.jvm.args></ipv4.server.jvm.args>
             <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
             <server.debug.args>Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5006</server.debug.args>
@@ -95,6 +89,57 @@
 		</dependency>
 	</dependencies>
 	<profiles>
+		<!-- The default profile skips all tests, though you can tune it 
+			to run just unit tests based on a custom pattern -->
+		<!-- Seperate profiles are provided for running all tests, including 
+			Arquillian tests that execute in the specified container -->
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+        <profile>
+      			<id>arq-remote</id>
+      			<activation>
+      				<activeByDefault>false</activeByDefault>
+      			</activation>
+      			<build>
+      				<plugins>
+      					<plugin>
+      						<artifactId>maven-surefire-plugin</artifactId>
+      						<configuration>
+      							<forkMode>once</forkMode>
+      							<systemPropertyVariables combine.children="append">
+      							<!--
+      							  Used in arquillian.xml
+      							-->
+      							  <server.jvm.args>${jvm.args.memory} ${ipv4.server.jvm.args}</server.jvm.args>
+                                    <node.address>127.0.0.1</node.address>
+      							</systemPropertyVariables>
+      						</configuration>
+      					</plugin>
+      				</plugins>
+      			</build>
+      			<dependencies>
+      				<dependency>
+      					<groupId>org.jboss.as</groupId>
+      					<artifactId>jboss-as-arquillian-container-remote</artifactId>
+      					<version>${jboss-as.version}</version>
+      					<scope>test</scope>
+      				</dependency>
+      			</dependencies>
+      		</profile>
 		<profile>
 			<id>arq</id>
 			<activation>
@@ -110,8 +155,8 @@
 							<!--
 							  Used in arquillian.xml
 							-->
-							  <server.jvm.args>${general.server.jvm.args} ${ipv4.server.jvm.args}</server.jvm.args>
-                                                          <node.address>127.0.0.1</node.address>
+							  <server.jvm.args>${jvm.args.memory} ${jvm.args.byteman} ${ipv4.server.jvm.args}</server.jvm.args>
+                              <node.address>127.0.0.1</node.address>
 							</systemPropertyVariables>
                             <skip>false</skip>
 						</configuration>
@@ -143,7 +188,7 @@
 							<!--
 							  Used in arquillian.xml
 							-->
-							  <server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args}</server.jvm.args>
+							  <server.jvm.args>${jvm.args.memory} ${jvm.args.byteman} ${ipv6.server.jvm.args}</server.jvm.args>
                                                           <node.address>[::1]</node.address>
 							</systemPropertyVariables>
                             <skip>false</skip>
